--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -1,3 +1,4 @@
+<div class='fixed-top'>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Target</a>
@@ -47,15 +48,15 @@
     </div>
   </div>
 </nav>
-
-<div class="p-5 text-center mb-2 bg-light text-black">
+</div>
+<div class="text-center">
+  <img src="assets/main3.png" class="img-fluid" alt="..." >
+  <div>
+    <%= link_to 'ゲストログイン（閲覧用）', api_v1_users_guest_sign_in_path, method: :post, class: "btn btn-success"%>
+  </div>
   <section class="text-center m-5">
-    <h1 class="text-center" >Welcome to Target!</h1>
-    <p>Targetは現在抱えているtodoがどの案件（todo-target）とリンクしているのかを明確にします</p>
-    <p>また部署の目標、会社の目標も確認でき、さらに目標達成までの進捗状況をtodoやtodo-targetの完了度合いにより確認することができます。</p>
-    <p>まずは会社、部署の新規登録をしましょう</p>
     <div class="dropdown">
-      <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+      <a class="btn btn-dark dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
         新規登録
       </a>
 
@@ -66,9 +67,92 @@
       </ul>
     </div>
   </section>
-    <div>
-      <%= link_to 'ゲストログイン（閲覧用）', api_v1_users_guest_sign_in_path, method: :post, class: "btn btn-success"%>
+</div>
+<div class="p-5 text-center mb-2 text-black">
+  <div class="container">
+    <div class="row">
+      <div class="col-1">
+      </div>
+      <div class="col-10">
+        <div class="card text-center">
+          <div class="card-header">
+            <h1 class="text-center" >Targetとは？</h1>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Targetは現在抱えているtodoがどの案件（todo-target）とリンクしているのかを明確にします</h5>
+            <p class="card-text">また部署の目標、会社の目標も確認でき、さらに目標達成までの進捗状況をtodoやtodo-targetの完了度合いにより確認することができます。</p>
+            <img src="assets/pdca.jpg" class="img-fluid" alt="..." >
+          </div>
+          <div class="card-footer text-muted">
+          </div>
+        </div>
+        <div class="col-1">
+        </div>
+      </div>
     </div>
+  </div>
+</div>
+<div class="p-5 text-center mb-2 text-black">
+  <div class="container">
+    <div class="row">
+      <div class="col-1">
+      </div>
+      <div class="col-10">
+        <div class="card mb-3">
+          <img src="assets/company2.png" class="card-img-top img-fluid" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Companyログイン時のDepartmentTargetの表示画面</h5>
+            <p class="card-text">各部署の年間目標と月間目標が一覧で表示されます。</p>
+            <p class="card-text"><small class="text-muted">CompanyLogin</small></p>
+          </div>
+        </div>
+      </div>
+      <div class="col-1">
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="p-5 text-center mb-2 text-black">
+  <div class="container">
+    <div class="row">
+      <div class="col-1">
+      </div>
+      <div class="col-10">
+        <div class="card mb-3">
+          <img src="assets/department.png" class="card-img-top img-fluid" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Departmentログイン時のDepartmentTargetの表示画面</h5>
+            <p class="card-text">ログイン部署の年間目標と月間目標が一覧で表示されます。</p>
+            <p class="card-text"><small class="text-muted">Department(株式会社guest:開発)Login</small></p>
+          </div>
+        </div>
+      </div>
+      <div class="col-1">
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="p-5 text-center mb-2 text-black">
+  <div class="container">
+    <div class="row">
+      <div class="col-1">
+      </div>
+      <div class="col-10">
+        <div class="card mb-3">
+          <img src="assets/todo.png" class="card-img-top img-fluid" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Userログイン時のToDOの表示画面</h5>
+            <p class="card-text">UserのToDoとリンクした案件が一覧で表示されます。</p>
+            <p class="card-text"><small class="text-muted">UserLogin</small></p>
+          </div>
+        </div>
+      </div>
+      <div class="col-1">
+      </div>
+    </div>
+  </div>
 </div>
 
 <footer class="bg-dark text-center text-lg-start text-white">
