--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -21,6 +21,11 @@
     <%= form.text_field :user_id %>
   </div>
 
+  <div class = "field">
+    <%= f.file_field :image %>
+  </div>
+
+
   <div class="actions">
     <%= form.submit %>
   </div>
