--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -15,7 +15,7 @@
     <% @tweets.each do |tweet| %>
       <tr>
         <td><%= tweet.body %></td>
-        <td><%= tweet.user_id %></td>
+        <td><%= image_tag tweet.image.to_s %></td>
         <td><%= link_to 'Show', tweet %></td>
         <td><%= link_to 'Edit', edit_tweet_path(tweet) %></td>
         <td><%= link_to 'Destroy', tweet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
