--- a/app/views/api/v1/tweets/_form.html.erb
+++ b/app/views/api/v1/tweets/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: tweet) do |form| %>
+<%= form_with model: [:api, :v1, @tweet] do |form| %>
   <% if tweet.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(tweet.errors.count, "error") %> prohibited this tweet from being saved:</h2>
@@ -22,7 +22,7 @@
   </div>
 
   <div class = "field">
-    <%= f.file_field :image %>
+    <%= form.file_field :image %>
   </div>
 
 
