--- a/app/views/api/v1/tweets/edit.html.erb
+++ b/app/views/api/v1/tweets/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', tweet: @tweet %>
 
 <%= link_to 'Show', @tweet %> |
-<%= link_to 'Back', tweets_path %>
+<%= link_to 'Back', api_v1_tweets_path %>
