--- a/app/views/api/v1/tweets/index.html.erb
+++ b/app/views/api/v1/tweets/index.html.erb
@@ -1,7 +1,6 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Tweets</h1>
-<i class="bi bi-hand-thumbs-up"></i>
 <table>
   <thead>
     <tr>
@@ -19,15 +18,8 @@
                 <%= link_to 'Show', [:api, :v1, tweet] %>
                 <%= link_to 'Edit', edit_api_v1_tweet_path(tweet) %>
                 <%= link_to 'Destroy', [:api, :v1, tweet], method: :delete, data: { confirm: 'Are you sure?' } %>
-                <%if Like.find_by(tweet_id: tweet.id, user_id: current_api_v1_user.id) != nil %>
-                  <%= button_to api_v1_like_path(Like.find_by(tweet_id: tweet.id, user_id: current_api_v1_user.id).id), { method: :delete, class: "btn btn-success"} do %>
-                    <i class="bi bi-hand-thumbs-up"></i>
-                  <%end%>
-                <%else%>
-                  <%= button_to api_v1_likes_path(params: {like: {user_id: current_api_v1_user.id, tweet_id: tweet.id}}), class: "btn btn-danger" do %>
-                    <i class="bi bi-hand-thumbs-up"></i>
-                  <%end%>
-                <%end%>
+                <div id="like_button_<%= tweet.id %>">
+                  <%= render partial: "api/v1/likes/like", locals: { tweet: tweet, current_api_v1_user: current_api_v1_user}%>
               </div>
             </div>
             <%= link_to tweet.image.to_s, "data-lightbox": tweet.image.to_s do %>
